syntax = "proto3";

package jobspb;

option go_package = "jobspb";

message Job {
    string id = 1;
    string title = 2;
    string description = 3;
    string image = 4;
    string email = 5;
    string phone = 6;
}

message CreateJobRequest {
    Job job = 1;
}

message CreateJobResponse {
    Job job = 1;
}

message GetAllJobsRequest {

}

message GetAllJobsResponse {
    repeated Job jobs = 1;
}

service JobService {
    rpc CreateJob (CreateJobRequest) returns (CreateJobResponse) {

    };

    rpc GetAllJobs (GetAllJobsRequest) returns (GetAllJobsResponse) {

    }
}
